ajustes de errores

--- a/Estacionamiento/estacionamiento/parqueadero/templates/zona/crear_zona.html
+++ b/Estacionamiento/estacionamiento/parqueadero/templates/zona/crear_zona.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Crear Zona{% endblock %}
 {% block content %}
 <div class="container mt-4">
     <h2>Registrar Zona</h2>
