--- a/Estacionamiento/estacionamiento/parqueadero/templates/base.html
+++ b/Estacionamiento/estacionamiento/parqueadero/templates/base.html
@@ -24,7 +24,15 @@
             <a href="{% url 'crear_factura' %}" class="btn btn-outline-primary">➕ Factura</a>
             <a href="{% url 'crear_ingreso' %}" class="btn btn-outline-primary">➕ Ingreso</a>
         </div>
- 
+        
+        <div class="messages">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+        
         {% block content %}{% endblock %}
     </main>
 
